--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>acs-aem-commons-content</artifactId>
             <type>content-package</type>
         </dependency>
+		<dependency>
+			<groupId>com.adobe.cq</groupId>
+			<artifactId>core.wcm.components.all</artifactId>
+			<type>zip</type>
+			<version>1.0.4</version>
+			<scope>provided</scope>
+		</dependency>
     </dependencies>
     <build>
         <resources>
@@ -148,12 +155,19 @@
                     </embeddeds>
 
                     <subPackages>
-                        <subPackage>
+                        <subPackage> 
                             <groupId>com.adobe.acs</groupId>
                             <artifactId>acs-aem-commons-content</artifactId>
                             <filter>true</filter>
                         </subPackage>
+						<subPackage>
+							<groupId>com.adobe.cq</groupId>
+							<artifactId>core.wcm.components.all</artifactId>
+							<filter>true</filter>
+					</subPackage>
                     </subPackages>
+					
+					
 
                     <targetURL>http://${crx.host}:${crx.port}/crx/packmgr/service.jsp</targetURL>
                 </configuration>
